# personal-pm-public

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PRIVATE_PUBLIC_SPLIT.md  README.md  USAGE.md  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: validate.yml
app/: main.py  onboarding.py  parser.py  paths.py  server.py  token_usage.py
app/static/: app.js  index.html  style.css
demo/: README.md
demo/context/: daily-outcomes.md  daily-report.md  planner-memory.md  planning-insights.md  recent-drive-docs.json  weekly-focus.md  weekly-outcomes.md
demo/data/: task_log.csv
demo/goals/: goal.md  projects.md
demo/tasks/: backlog.md  today.md
demo/tasks/archive/: log.md
docs/: github-sync.md
public/skill/personal-pm/: SKILL.md
public/skill/personal-pm/references/: archive-template.md  example-run.md  today-template.md
public/skill/personal-pm/scripts/: outcome_memory.py  task_ledger.py  validate_today.py
scripts/: build_recent_drive_docs_cache.py  github_sync.py  google_docs_ingest_state.py  pm_morning.sh  select_recent_doc_task_candidate.py  validate_workspace.py
templates/: README.md
templates/config/: github_sync.example.json
templates/context/: daily-outcomes.md  planner-memory.md  planning-insights.md  recent-drive-docs.json  weekly-focus.md  weekly-outcomes.md
templates/data/: task_log.csv
templates/goals/: goal.md  projects.md
templates/tasks/: backlog.md  today.md
tests/: test_analytics.py  test_github_sync.py  test_onboarding_context.py  test_onboarding_writers.py  test_validate_workspace.py  test_weekly_focus.py
